[gd_scene load_steps=8 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://font/DroidSans.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
modulate = Color( 0.219608, 0.180392, 0.133333, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -183.5
margin_top = -38.0
margin_right = 183.5
margin_bottom = 38.0
custom_fonts/font = SubResource( 5 )
text = "Select Image"

[node name="Sprite" type="Sprite" parent="."]
centered = false

[node name="World" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="LeftCollision" type="CollisionShape2D" parent="StaticBody2D"]
unique_name_in_owner = true
position = Vector2( 841.5, 2134 )
shape = SubResource( 1 )

[node name="RightCollision" type="CollisionShape2D" parent="StaticBody2D"]
unique_name_in_owner = true
position = Vector2( 841.5, 2134 )
shape = SubResource( 2 )

[node name="TopCollision" type="CollisionShape2D" parent="StaticBody2D"]
unique_name_in_owner = true
position = Vector2( 841.5, 2134 )
shape = SubResource( 3 )

[node name="BottomCollision" type="CollisionShape2D" parent="StaticBody2D"]
unique_name_in_owner = true
position = Vector2( 841.5, 2134 )
shape = SubResource( 4 )
